# Low-Cost-Telematics-Device

./: README.md
Documentation/: Benchmarked telematics devices.xlsx  Components Parameter Estimation with References.docx  Estimated Development Cost.xlsx  Low Cost Telematics Device Design Flow and Methodology.docx  Purchase list.xlsx
Firmware/: System Firmware CMakeLists.txt  SystemFirmware.c
Firmware/gps_uart/: CMakeLists.txt  main.c
Firmware/mpu9250_spi/: CMakeLists.txt  main.c
Firmware/pico-rtc-ds3231/: CMakeLists.txt  main.c
Firmware/pico-rtc-ds3231/ds3231/: CMakeLists.txt  ds3231.c
Firmware/sd_fat_spi/: CMakelists.txt
Firmware/sht30a_i2c/: CMakeLists.txt  (+1 more)
IMU_breakout PCB/: fp-lib-table  test.csv  test.kicad_pcb  test.kicad_prl  test.kicad_pro  test.kicad_sch
SHT30_breakout PCB/: SHT30_breakout-B_Cu.gbr  SHT30_breakout-B_Silkscreen.gbr  SHT30_breakout-Edge_Cuts.gbr  SHT30_breakout-F_Cu.gbr  SHT30_breakout-F_Mask.gbr  SHT30_breakout-F_Silkscreen.gbr  SHT30_breakout-job.gbrjob  SHT30_breakout.csv  SHT30_breakout.drl  SHT30_breakout.kicad_pcb  SHT30_breakout.kicad_prl  SHT30_breakout.kicad_pro  SHT30_breakout.kicad_sch  SHT30_breakout.xml  fp-info-cache  fp-lib-table
Telematics device PCB/: DIP-40_700_ELL.kicad_mod  DIP-40_700_ELL.kicad_pro  DPAK457P1010X238-3N.kicad_mod  MODULE_SC0915.kicad_mod  New_Library.kicad_sym  Push button.kicad_mod  Telematics device PCB.kicad_pcb  Telematics device PCB.kicad_prl  Telematics device PCB.kicad_pro  Telematics device PCB.kicad_sch  Telematics device PCB.pro  WE_629105136821.kicad_mod  fp-lib-table  sym-lib-table
(+14 files in other folders)
